<resources>
    <string name="app_name">MaptyXf</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_address">enter_address</string>
    <string name="enter">enter</string>
    <string name="color_index">Color Index</string>
    <string name="yellow_color_animal_trespassing_nsky_blue_color_theft_nred_color_natural_disaster">Yellow Color: Animal Trespassing\nSky Blue Color: Theft\nRed Color: Natural Disaster</string>
    <string name="color_index_info">color_index_info</string>
    <string name="text">text</string>
    <string name="chartis_text">chartis_text</string>
    <string name="yellow_color_animal_trespassing">Yellow Color: Animal Trespassing</string>
    <string name="sky_blue_color_theft">Sky Blue Color: Theft</string>
    <string name="red_color_natural_disaster">Red Color: Natural Disaster</string>
    <string name="show_index">Show Index</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Username" />
    <string name="Password" />
    <string name="login">Login</string>
    <string name="username_speakable_text">Enter your username here</string>
    <string name="image_description">image_description</string>
    <string name="username_content_description">username_content_description</string>
    <string name="username_content_descriptions">username_content_descriptions</string>
    <string name="password_edit_text_description">Enter your password</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click_to_register</string>
    <string name="logout">Logout</string>
    <string name="adb2_json" />
    <string name="details">Details</string>
    <string name="yellow_animal_trespassing">Yellow = Animal Trespassing</string>
    <string name="back">Back</string>
    <string name="index_for_more_details">Index for more details</string>
    <string name="brown_theft">Brown = Theft</string>
    <string name="sky_blue_crowd">Sky Blue = Crowd</string>
    <string name="red_criminal_activity">Red = Criminal Activity</string>
    <string name="review">Review</string>
    <string name="purple_accident">Purple = Accident</string>
    <string name="show_my_location">Show My Location</string>

</resources>