<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_for_more_details"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brown_theft"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow_animal_trespassing"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sky_blue_crowd"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_criminal_activity"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purple_accident"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/back" />


</LinearLayout>
