<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <EditText
        android:id="@+id/sourceLatitudeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:padding="15dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <!-- Show index button -->
        <Button
            android:id="@+id/showIndexButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/showReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/showCurrentLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CL"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>
